@@ -1,26 +1,35 @@
-package com.lambdas;
+package com.lambdas.main;
 
 import java.util.Arrays;
 import java.util.List;
-
 import java.util.stream.Collectors;
 
-public class LambdasApp {
+import com.lambdas.FunctionalInterfaces.INumeroPI;
+import com.lambdas.FunctionalInterfaces.IReverse;
+
+public class LambdasNivell1App {
 
 	public static void main(String[] arg) {
 
 		// Nivell1_Fase1
-
-		// lambda1(); //filtrar per 2 condicions "AND"
-		// lambda2(); //fer acció per 2 condicions
-		// lambda3(); //filtrar per 1 condicions
-		// lambda4(); //filtrar per 2 condicions "OR"
-		// lambda5(); //imprimeix llista Strings
-		// lambda6(); //imprimeix llista Strings amb reference
+		
+		lambda1(); //filtrar per 2 condicions "AND"
+		
+		lambda2(); //fer acció per 2 condicions
+		
+		lambda3(); //filtrar per 1 condicions
+		
+		lambda4(); //filtrar per 2 condicions "OR"
+		
+		lambda5(); //imprimeix llista Strings
+		
+		lambda6(); //imprimeix llista Strings amb reference
 
 		// Nivell1_Fase2
 
-		lambda7(); // utiliza lambda en un mètode abstracte no definit
+		lambda7(); 	// utiliza lambda en un mètode abstracte sense paràmetre
+
+		
 	}
 
 	// filtrar per 2 condicions "AND"
@@ -31,10 +40,12 @@ public class LambdasApp {
 		List<String> list2 = list1.stream().filter(str -> str.contains("A") && str.length() == 3)
 				.collect(Collectors.toList());
 
-		System.out.println(list2);
+		System.out.println("\nArray original:\n"+list1);
+		System.out.println("\nParaules iniciades amb A i que tenen 3 lletres:\n"+list2);
 
 	}
 
+	
 	// fer acció per 2 condicions
 	public static void lambda2() {
 
@@ -52,18 +63,27 @@ public class LambdasApp {
 		});
 
 		sb.setLength(sb.length() - 1);
-		System.out.println(sb);
+		
+		System.out.println("\nArray original:\n"+list1);
+		System.out.println("\nAfegir 'e' als nombres senars i 'o' als nombres parells: \n"+sb);
 
 	}
 
+	
 	// filtrar per 1 condicions
 	public static void lambda3() {
 
 		List<String> list1 = Arrays.asList("Oscar", "Adelaila", "Antonia", "Bea", "Carla");
 
-		List<String> list2 = list1.stream().filter(str -> str.toUpperCase().contains("O")).collect(Collectors.toList());
+		List<String> list2 = list1.stream()
+				.filter(str -> str.toUpperCase()	
+				.contains("O"))
+				.collect(Collectors
+				.toList());
 
-		System.out.println(list2);
+		System.out.println("\nArray original:\n"+list1);
+		
+		System.out.println("\nRetorna totes les paraules que tenen la paraula 'o'\n"+list2);
 
 	}
 
@@ -72,10 +92,13 @@ public class LambdasApp {
 
 		List<String> list1 = Arrays.asList("Oscar", "Adelaila", "Antonia", "Bea", "Carla");
 
-		List<String> list2 = list1.stream().filter(str -> str.toUpperCase().contains("O") || str.length() > 5)
+		List<String> list2 = list1.stream()
+				.filter(str -> str.toUpperCase().contains("O") || str.length() > 5)
 				.collect(Collectors.toList());
 
-		System.out.println(list2);
+		System.out.println("\nArray original:\n"+list1);
+		
+		System.out.println("\nRetorna totes les paraules que tenen la paraula 'o' o més de 5 lletres\n"+list2);
 
 	}
 
@@ -85,6 +108,9 @@ public class LambdasApp {
 		List<String> list1 = Arrays.asList("Gener", "Febrer", "Març", "Abril", "Maig", "Juny", "Juliol", "Agost",
 				"Setembre", "Octubre", "Novembre", "Desembre");
 
+		System.out.println("\nArray original:\n"+list1
+				+"\n\nImprimeix els mesos mitjançant lambda:");
+		
 		list1.stream().forEach(str -> System.out.println(str));
 
 	}
@@ -95,6 +121,9 @@ public class LambdasApp {
 		List<String> list1 = Arrays.asList("Gener", "Febrer", "Març", "Abril", "Maig", "Juny", "Juliol", "Agost",
 				"Setembre", "Octubre", "Novembre", "Desembre");
 
+		System.out.println("\nArray original:\n"+list1
+				+"\n\nImprimeix els mesos mitjançant mètode réference:");
+		
 		list1.stream().forEach(System.out::println);
 
 	}
@@ -104,11 +133,8 @@ public class LambdasApp {
 
 		INumeroPI pi = ()->3.1415;
 		
-		
-		System.out.println(pi.getPiValue());
+		System.out.println("\nInjectar mitjançant lambda un mètode a una interfície funcional que no rep paràmetre:"
+				+ "\nReusltat: " + pi.getPiValue());
 
 	}
-	
-
-
 }
